--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
   body {
     @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
   }
+
   header {
     @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
   }
@@ -15,13 +16,118 @@
   .headerLink {
     @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s] hover:text-[#b3b3b3];
   }
+
+  .input {
+    @apply w-full rounded bg-[#333333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545];
+  }
+
   .bannerButton {
     @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
   }
-  .input {
-    @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545];
-  }
+
   .modalButton {
     @apply flex h-11 w-11 items-center justify-center rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10;
+  }
+
+  .membershipLink {
+    @apply cursor-pointer text-blue-500 hover:underline;
+  }
+
+  .planBox {
+    @apply relative mx-1.5 flex h-20 w-[calc(100%/3)] cursor-default items-center justify-center rounded-sm bg-[#e50914] font-semibold shadow after:absolute after:top-full after:left-1/2 after:block after:-translate-x-1/2 after:border-8 after:border-b-0 after:border-transparent after:border-t-[#e50914] after:content-[""] md:h-32 lg:mx-8 hover:opacity-70;
+  }
+
+  /* Table */
+  .tableRow {
+    @apply flex flex-wrap items-center font-medium;
+  }
+
+  .tableDataTitle {
+    @apply w-full p-2.5 text-center text-sm font-normal text-white md:w-2/5 md:p-3.5 md:text-left md:text-base;
+  }
+
+  .tableDataFeature {
+    @apply w-[calc(100%/3)] p-2.5 text-center md:w-[calc(60%/3)] md:p-3.5;
+  }
+
+  /* MUI Menu */
+  .menu {
+    @apply md:hidden;
+  }
+
+  .menu .MuiPaper-root {
+    @apply !absolute !left-0 !rounded-none !border !border-[gray] !bg-black !text-white;
+  }
+
+  .menu .MuiList-root {
+    @apply !p-0;
+  }
+
+  .menu .MuiMenuItem-root {
+    @apply !block !w-72 !py-3.5 !text-center !text-sm !font-light !text-[#b3b3b3] !transition !duration-200 first:cursor-default first:!font-normal first:!text-white hover:!bg-[#11100F];
+  }
+
+  /* Card */
+  .card {
+    @apply border-solid  border-t border-l relative w-[calc(100%/3)];
+    width: 506px;
+    height: 319px;
+    border-color: rgba(238, 237, 237, 0.4);
+    border-radius: 30px;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    color: #fff;
+    cursor: pointer;
+  }
+  .bank {
+    @apply text-3xl absolute text-white;
+    font-family: "Mulish", sans-serif;
+    top: 30px;
+    right: 30px;
+  }
+  .chip {
+    @apply h-16 absolute text-white w-14;
+    top: 100px;
+    left: 40px;
+  }
+
+  .indicator {
+    @apply h-16 absolute text-white w-14;
+    top: 100px;
+    left: 100px;
+  }
+  .number {
+    @apply font-normal text-4xl absolute text-white;
+    bottom: 100px;
+    left: 30px;
+  }
+  .card-holder {
+    @apply font-bold text-sm absolute text-white uppercase;
+    font-family: cursive;
+    bottom: 30px;
+    left: 30px;
+  }
+  .card-holder span {
+    @apply font-normal;
+    font-size: 10px;
+    font-family: "Mulish", sans-serif;
+  }
+  .valid {
+    @apply font-normal text-lg absolute text-white uppercase;
+    font-family: "Mulish", sans-serif;
+    bottom: 28px;
+    left: 220px;
+  }
+
+  .valid span {
+    @apply font-normal;
+    font-size: 10px;
+    font-family: "Mulish", sans-serif;
+  }
+
+  .logo {
+    @apply h-16 absolute w-16;
+    right: 30px;
+    bottom: 30px;
   }
 }
